--- a/TestingAutomationProject/test-output/old/Default suite/classes.html
+++ b/TestingAutomationProject/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.pages.searchpageTest</td>
+<td>com.qa.com.qa.pages.verifyUrl</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyHomepageTitle</td>
+<td>verifyUrl</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
