--- a/TestingAutomationProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestingAutomationProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc9687">  <td>20/11/27 10:42:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;searchpageTest.launchBrowser()[pri:0, instance:com.qa.pages.searchpageTest@50caa560]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1431530910</td>   <td></td> </tr>
-<tr bgcolor="bc9687">  <td>20/11/27 10:42:42</td>   <td>13348</td> <td>&nbsp;</td><td title="&lt;&lt;searchpageTest.terminateBrowser()[pri:0, instance:com.qa.pages.searchpageTest@50caa560]">&lt;&lt;terminateBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1431530910</td>   <td></td> </tr>
-<tr bgcolor="bc9687">  <td>20/11/27 10:42:42</td>   <td>13060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="searchpageTest.verifyHomepageTitle()[pri:0, instance:com.qa.pages.searchpageTest@50caa560]">verifyHomepageTitle</td> 
-  <td>main@1431530910</td>   <td></td> </tr>
+<tr bgcolor="bc9687">  <td>20/11/27 12:39:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verifyUrl.verifyUrl()[pri:0, instance:com.qa.com.qa.pages.verifyUrl@3f56875e]">verifyUrl</td> 
+  <td>main@1373419525</td>   <td></td> </tr>
 </table>
